[workspace]
members = ["commons", "dlmm_interface", "market_making", "."]

[workspace.dependencies]
tokio = { version = "1.37", features = ["full", "parking_lot"] }
hyper = { version = "0.14", features = ["full"] }
routerify = "3"
ureq = { version = "2", features = ["json"] }
anchor-client = { version = "0.28", features = ["async"] }
anchor-spl = "0.28"
anchor-lang = "0.28"
env_logger = "0.10"
log = "0.4"
clap = { version = "4", features = ["derive"] }
shellexpand = "2"
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
spl-associated-token-account = "1"
solana-transaction-status = "1.17"
bs58 = "0.5"
chrono = "0.4"
solana-account-decoder = "1.17"
itertools = "0.10"
rust_decimal = { version = "1", features = ["maths"] }
spl-memo = { version = "3.0", features = ["no-entrypoint"] }
bincode = "1.3"
solana-sdk = "1.17"
ruint = "1.9"
num-traits = "0.2"
num-integer = "0.1"
bytemuck = { version = "1.16", features = ["derive", "min_const_generics"] }
async-trait = "0.1"
spl-transfer-hook-interface = "0.6"
commons = { path = "./commons" }
dlmm_interface = { path = "./dlmm_interface" }

[package]
name = "swap_quote"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full", "parking_lot"] }
solana-sdk = { workspace = true }
solana-client = "1.17"
commons = { path = "./commons" }
dlmm_interface = { path = "./dlmm_interface" }
async-trait = { workspace = true }
bincode = { workspace = true }
anchor-client = { workspace = true, features = ["async"] }
anchor-lang = { workspace = true }
bs58 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = "0.21"

